Fixed bugs, started css things, preparing for buy menu implemnet

--- a/game.html
+++ b/game.html
@@ -8,10 +8,10 @@
     </head>
 <body onLoad="startGame();">
 <h2>Game</h2>
+<div class='margin_bottom' id='info'></div>
 <div id='playArea'>
 	
 </div>
-<div id="info"></div>
 
 <button type="button" onClick="backMainMenu();">Main Menu</button>
 
