Added basic html for shop, added placeholder images

--- a/game.html
+++ b/game.html
@@ -9,7 +9,8 @@
 <body onLoad="startGame();">
 <h2>Game</h2>
 <div class='margin_bottom' id='info'></div>
-<div class='margin_bottom' id='shop'></div>
+<div class='margin_bottom' id='shop'>
+</div>
 <div id='playArea'>
 	
 </div>
