--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 	<script src="menuScript.js"></script>
+	<script src="Card.js"></script>
     </head>
 <body onLoad="main();">
 <h1>Dominion</h1>
