--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
 	<script src="Player.js"></script>
 	<script src="Card.js"></script>
 	<script src="Deck.js"></script>
+	<script src="html_css_functions.js"></script>
 </div>
 </body>
 </html>
