Ready for testing, finished buy

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </head>
 <body onLoad="main();">
 <h1>Dominion</h1>
-<div>
+<div class='info'>
 	<button id="players-">-</button>
-	<div id="playersPlayingID"></div>
+	<div class='info_child' id="playersPlayingID"></div>
 	<button id="players+">+</button>
 </div>
 <button type="button" onClick="changePage();">Start Game</button>
