Updated money on buy, changed title, searching for bug

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 <body onLoad="startGame();">
-<h2>Game</h2>
+<h2>Dominion</h2>
 <div class='margin_bottom' id='info'></div>
 <div class='margin_bottom' id='shop'>
 </div>
