Updated def buttons, added victory conditions

--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
 	
 </div>
 
-<button type="button" onClick="backMainMenu();">Main Menu</button>
+<button type="button" class='normalButton' onClick="backMainMenu();">Main Menu</button>
 
 <div>
 	<script src="gameScript.js"></script>
