--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <html>
 <head>
 	<title>Dominion</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-	<script src="menuScript.js"></script>
-	<script src="Card.js"></script>
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+    <link rel='stylesheet' type='text/css' href='style.css'>
+	<script src='menuScript.js'></script>
+	<script src='Card.js'></script>
     </head>
-<body onLoad="main();">
-<h1>Dominion</h1>
+<body onLoad='main();' background='res/forest.jpg'>
+<h1 class='strokeme biggest_text'>Dominion</h1>
 <div class='info'>
-	<button id="players-">-</button>
-	<div class='info_child' id="playersPlayingID"></div>
-	<button id="players+">+</button>
+	<button class='bigButton' id='players-'>-</button>
+	<div class='info_child strokeme bold big_text' id='playersPlayingID'></div>
+	<button class='bigButton' id='players+'>+</button>
 </div>
-<button type="button" onClick="changePage();">Start Game</button>
+<button type='button' class='normalButton' onClick='changePage();'>Start Game</button>
 
 </body>
 </html>
