Updated Card implementation, prep for css remake

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <link rel='stylesheet' type='text/css' href='style.css'>
     </head>
-<body onLoad='startGame();' background='res/forest.jpg'>
+<body onLoad='startGame();' class='flex-container' background='res/forest.jpg'>
 <h1 class='strokeme biggest_text'>Dominion</h1>
 <div class='margin_bottom' id='info'></div>
 <div class='margin_bottom' id='shop'>
