Updated todo, fixed css

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 <div class='margin_bottom' id='info'></div>
 <div class='margin_bottom' id='shop'>
 </div>
-<div id='playArea' class='playArea'>
+<div id='playArea' class='flex-container'>
 	
 </div>
 
