Updated CSS, consistent '_', out of stock consistent update, inactive action cards in phase != 0

--- a/game.html
+++ b/game.html
@@ -6,12 +6,12 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <link rel='stylesheet' type='text/css' href='style.css'>
     </head>
-<body onLoad='startGame();' class='flex-container' background='res/forest.jpg'>
-<h1 class='strokeme biggest_text'>Dominion</h1>
+<body onLoad='startGame();' class='flex_container' background='res/forest.jpg'>
+<div class='text_shadow size3_text_big'>Dominion</div>
 <div class='margin_bottom' id='info'></div>
 <div class='margin_bottom' id='shop'>
 </div>
-<div id='playArea' class='flex-container'>
+<div id='playArea' class='flex_container'>
 	
 </div>
 
