--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<script src='Card.js'></script>
     </head>
 <body onLoad='main();' background='res/forest.jpg'>
-<h1 class='strokeme biggest_text'>Dominion</h1>
+<div class='text_shadow text32'>Dominion</div>
 <div class='info'>
 	<button class='bigButton' id='players-'>-</button>
-	<div class='info_child strokeme bold big_text' id='playersPlayingID'></div>
+	<div class='info_child text_shadow bold big_text' id='playersPlayingID'></div>
 	<button class='bigButton' id='players+'>+</button>
 </div>
 <button type='button' class='normalButton' onClick='changePage();'>Start Game</button>
