--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class='text_shadow text32'>Dominion</div>
 <div class='info'>
 	<button class='bigButton' id='players-'>-</button>
-	<div class='info_child text_shadow bold big_text' id='playersPlayingID'></div>
+	<div class='info_child text_shadow bold text16' id='playersPlayingID'></div>
 	<button class='bigButton' id='players+'>+</button>
 </div>
 <button type='button' class='normalButton' onClick='changePage();'>Start Game</button>
