Added todo on turn change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src='Card.js'></script>
     </head>
 <body onLoad='main();' background='res/forest.jpg'>
-<div class='text_shadow text32'>Dominion</div>
+<div class='text_shadow size3_text_big'>Dominion</div>
 <div class='info'>
 	<button class='bigButton' id='players-'>-</button>
 	<div class='info_child text_shadow bold text16' id='playersPlayingID'></div>
