Fixed crashes (var n firefox), help msgs and spread operator in modifyCSS method

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel='stylesheet' type='text/css' href='style.css'>
 	<script src='menuScript.js'></script>
 	<script src='Card.js'></script>
+	<script src='html_css_functions.js'></script>
     </head>
 <body onLoad='main();' background='res/forest.jpg'>
 <div class='text_shadow size3_text_big'>Dominion</div>
@@ -16,6 +17,7 @@
 	<button class='bigButton' id='players+'>+</button>
 </div>
 <button type='button' class='normalButton' onClick='changePage();'>Start Game</button>
+<div id='helpMessage' class='flex_container'></div>
 
 </body>
 </html>
