Added turn switching animation, removed def status texts

--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     </head>
 <body onLoad='startGame();' class='flex_container' background='res/forest.jpg'>
 <div class='text_shadow size3_text_big'>Dominion</div>
-<div class='margin_bottom' id='info'></div>
+<div class='flex_container' id='info'></div>
 <div class='margin_bottom' id='shop'>
 </div>
 <div id='playArea' class='flex_container'>
